--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,9 @@ footer {
 
 .kepek img{
   display: flex;
-  width: 800px;
+  width: 100%;
+  padding-left: 50px;
+  padding-RIGHT: 50px;
 }
 
 .kepek{
